# agentic-ai-project

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: config.yaml
config/prompts/: coordinator.yaml  web_search.yaml
config/prompts/examples/: jarvis.yaml
examples/: README.md  __init__.py  browser_agent_example.py  email_review_example.py  jarvis.py  main_agent_example.py  planning_flow_example.py  research_example.py  run_flow.py  software_development_example.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py  browser_agent.py  coordinator_agent.py  email_reviewer_agent.py  factory.py  main_agent.py  planning_agent.py  researcher_agent.py  swe_agent.py  web_search_agent.py
src/agents/specialized_agents/: email_reviewer_agent.py  researcher_agent.py
src/core/: __init__.py  config.py  exceptions.py  logger.py  prompts.py  schema.py  structured_output.py
src/flow/: __init__.py  base_flow.py  planning_flow.py
src/memory/: __init__.py  chat_history.py
src/models/: __init__.py  bedrock.py
src/tools/: __init__.py  base.py  bash.py  browser.py  email_analysis.py  factory.py  file_saver.py  langchain_adapter.py  planning.py  python_executor.py  structured_output.py  terminal.py  terminate.py  tool_collection.py  web_search.py
tests/: run_labs.sh
