[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai_learning"
version = "0.1.0"
description = "A modern agent-based AI project built with CrewAI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "crewai>=0.105.0",
    "crewai-tools>=0.36.0",
    "langchain>=0.1.0",
    "pydantic>=2.5.2",
    "boto3>=1.37.13",
    "duckduckgo-search>=4.1.1",
    "googlesearch-python>=1.2.3",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "selenium>=4.10.0",
    "loguru>=0.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
